[gd_scene load_steps=3 format=3 uid="uid://dxl7wwj46p43l"]

[ext_resource type="Script" uid="uid://b3q86cifp43y8" path="res://Scenes/passives_handler/passive_tooltip_popup.gd" id="1_rxaav"]
[ext_resource type="Texture2D" uid="uid://orm6q6ad66v" path="res://art/big_block.png" id="2_hoaph"]

[node name="PassiveTooltipPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rxaav")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.588235)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -259.5
offset_right = 500.0
offset_bottom = 259.5
grow_horizontal = 2
grow_vertical = 2

[node name="PassiveIcon" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("2_hoaph")
stretch_mode = 5

[node name="PassiveTooltip" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "[center]Passive Description[/center]

Bla blah blah bla blah blah blah bla blah blah blah bla blah blah blah bla blah blah blah bla blah blah blah bla blah "
fit_content = true

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 80)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -167.0
offset_top = 16.0
offset_right = -17.0
offset_bottom = 96.0
grow_horizontal = 0
text = "Back"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
